# debateapp

./: .gitignore  DEBATE_APP_README.md  FRONTEND_ARCHITECTURE.md  LIVEKIT_SETUP.md  LIVEKIT_TROUBLESHOOTING.md  README.md  SERVER_SETUP.md  SETUP.md  SUPABASE_SETUP.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-server.bat  setup-server.sh  start-dev.js  test-conversation.js  test-livekit.js  vite.config.ts
.cursor/: mcp.json
attached_assets/: Pasted-I-ll-search-through-the-codebase-to-find-all-API-endpoints-Search-files-Here-s-a-comprehensive-1749165330703.txt  Pasted-Perfect-if-you-don-t-need-a-freelancer-and-want-to-build-it-yourself-that-s-totally-doabl-1749079162879.txt  content-1749165913852.md  prompt
client/: env.example  index.html
client/src/: App.tsx  index.css
client/src/hooks/: use-auth.ts  use-camera.ts  use-eye-tracking.ts  use-face-detection.ts  use-head-pose-detection.ts  (+2 more)
server/: API_SETUP.md  API_SETUP_GUIDE.md  SETUP.md  conversation-topics.ts  debate-topics.ts  deepgram-service.ts  env.example  head-pose-detector.py  head-pose-manager.ts  index.ts  livekit-service.ts  livekit-voice-agent.py  realtime-analysis.py  requirements.txt  routes.ts  simple-head-pose-detector.py  simple-voice-agent.py  storage.ts  test-api-keys.py  test-deepgram.py  test-python-deps.py  test-routes.ts  test-voice-agent.py  voice-analysis-service.ts
server/supabase-migrations/: 001_create_users_table.sql  002_create_debate_topics_table.sql  003_create_debate_sessions_table.sql  004_create_session_analytics_table.sql
shared/: schema.ts
(+39 files in other folders)
